--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
                     </div>
                     </div>
                 </div>
+                
+                <hr class="settings-divider">
                 <!-- Блок управления PIN-кодами -->
                 <div class="settings-block">
                     <div class="settings-block-title" onclick="toggleSettingsBlock(this)">Управление PIN-кодами</div>
@@ -184,7 +186,7 @@
                     </div>
                     <div class="stat-value-with-label">
                         <div class="stat-value" id="currentLevel">1</div>
-                        <div class="stat-unit">ур.</div>
+                        <div class="stat-unit">уровень</div>
                     </div>
                 </div>
 
